--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@react-spring/web": "^9.7.5",
     "@swc/core": "^1.11.24",
     "@tanstack/react-query": "^5.56.2",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "@vitejs/plugin-react": "^4.4.1",
     "ai": "^4.3.13",
     "caniuse-lite": "^1.0.30001716",
